feat: fix and add responsive css

--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
         <section class="hero">
             <h1 class="hero__title">Lorem ullamco</h1>
             <div class="hero__grid">
-                <img src="img/image-1.png" alt="" class="hero__grid-image">
+                <img src="img/image-1.png" alt="" class="hero__grid-image hero__grid-image--right">
                 <img src="img/image-2.png" alt="" class="hero__grid-image">
             </div>
-            <p class="hero__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Excepteur eiusmod consectetur proident Lorem reprehenderit esse do anim velit in aliquip dolore ut officia. Consectetur reprehenderit proident do exercitation eu. Sunt fugiat pariatur elit est laboris quis. Esse mollit incididunt quis amet. Qui non irure incididunt laborum nisi cillum consequat aliquip aliquip cillum in. Ut excepteur labore voluptate tempor cupidatat dolor eiusmod do ipsum Lorem cupidatat do labore.</p>
-            <p class="hero__description">Proident dolore nisi eiusmod excepteur aliquip esse ut excepteur. Non excepteur sunt reprehenderit sit ex ullamco eiusmod Lorem incididunt nisi mollit nostrud. Irure velit enim elit minim commodo qui culpa cillum duis fugiat consequat pariatur.</p>
+            <p class="hero__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Excepteur eiusmod consectetur proident Lorem </p>
+            <p class="hero__description">reprehenderit esse do anim velit in aliquip dolore ut officia. Consectetur reprehenderit proident do exercitation eu. </p>
+            <p class="hero__description">Sunt fugiat pariatur elit est laboris quis. Esse mollit incididunt quis amet. Qui non irure incididunt laborum nisi cillum consequat aliquip aliquip cillum in. Ut excepteur labore voluptate tempor cupidatat dolor eiusmod do ipsum Lorem </p>
+            <p class="hero__description hero__description--bottom">cupidatat do labore.</p>
+            <p class="hero__description">Proident dolore nisi eiusmod excepteur aliquip esse ut excepteur. Non excepteur sunt reprehenderit sit ex ullamco </p>
+            <p class="hero__description">eiusmod Lorem incididunt nisi mollit nostrud. Irure velit enim elit minim commodo qui culpa cillum duis </p>
+            <p class="hero__description">fugiat consequat pariatur.</p>
         </section>
 
         <section class="content">
@@ -23,7 +28,7 @@
                 <img src="img/image-3.png" alt="" class="content__image">
                 <div class="content__text">
                     <div class="content__body">
-                        <h2 class="content__title">Lorem ipsum</h2>
+                        <h2 class="content__title content__title-first">Lorem ipsum</h2>
                         <h3 class="content__subtitle">Excepteur eiusmod consectetur</h3>
                         <p class="content__description">Proident dolore nisi eiusmod excepteur aliquip esse ut excepteur. Non excepteur sunt reprehenderit sit ex ullamco eiusmod Lorem incididunt nisi mollit nostrud. Irure velit enim elit minim commodo qui culpa cillum duis fugiat consequat pariatur.</p>
                         <h3 class="content__subtitle">Quis aliqua reprehenderit</h3>
@@ -37,7 +42,7 @@
             <div class="content__block content__block-second">
                 <div class="content__text">
                     <div class="content__body">
-                        <h2 class="content__title">Mollit aliquip do ipsum consectetur</h2>
+                        <h2 class="content__title content__title-second">Mollit aliquip do ipsum consectetur</h2>
                         <p class="content__description">Ex laborum ea qui consectetur mollit commodo eiusmod culpa dolor cupidatat. Ullamco dolore irure ea sit elit velit non officia. Ad eu reprehenderit in et voluptate mollit. Reprehenderit incididunt magna consequat enim sit eiusmod est dolor laborum cupidatat.</p>
                         <p class="content__description">Ipsum minim mollit irure dolore. Sint fugiat deserunt dolor aute enim et cillum adipisicing cillum nostrud anim. Sit dolore incididunt dolore do sunt pariatur consectetur id qui pariatur eu incididunt adipisicing. Irure sint fugiat officia veniam consectetur. Esse laborum amet aliqua ad in sunt labore duis.</p>
                     </div>
